--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -26,7 +26,21 @@
 .profileContainer{
     width: 100%;
     display: flex;
-    /* align-self: center; */
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
     padding-top: 118px;
+    /* border: 1px solid red; */
+}
+
+.profileTexts{
+    padding-top: 20px;
+    color: white;
+    /* border: 1px solid blueviolet; */
+}
+
+.username{
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 24px;
 }
