--- a/src/components/home/home_componet/navbar.css
+++ b/src/components/home/home_componet/navbar.css
@@ -9,7 +9,7 @@ nav{
 }
 
 .navItems{
-    padding-top: 60px;
+    padding-top: 45px;
 }
 
 
@@ -53,6 +53,7 @@ li:hover{
     align-items: center;
     padding-top: 30px;
     padding-left: 20px;
+    padding-right: 20px;
 }
 
 .logo .logoText{
