--- a/src/components/rhstudio/rhstudio.css
+++ b/src/components/rhstudio/rhstudio.css
@@ -9,12 +9,12 @@
     transform: rotate(180deg);
 }
 
-.customizationProfilePage{
+.rhstudioPage{
     display: flex;
     flex-direction: row;
 }
 
-.customizationProfileContainer{
+.rhstudioContainer{
     color: aliceblue;
     border:1px solid brown;
     height: 100%;
