--- a/src/components/rhstudio/rhstudio.css
+++ b/src/components/rhstudio/rhstudio.css
@@ -17,7 +17,7 @@
 
 .rhstudioContainer{
     color: aliceblue;
-    border:1px solid brown;
+    /* border:1px solid brown; */
     height: 100%;
     width: 100%;
 }
