--- a/src/components/rhstudio/rhstudio_component/customization.css
+++ b/src/components/rhstudio/rhstudio_component/customization.css
@@ -37,4 +37,8 @@ form > div > .center{
 
 input[type="text"],input[type="file"]{
     width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 2px;
 }
