--- a/src/components/rhstudio/rhstudio_component/customization.css
+++ b/src/components/rhstudio/rhstudio_component/customization.css
@@ -35,12 +35,21 @@ form > div > .center{
     justify-content: center;
 }
 
-input[type="text"],input[type="file"]{
+input[type="text"]{
     width: 100%;
     outline: none;
     border: none;
     border-radius: 4px;
     padding: 5px 2px;
+    border: 1px solid white;
+    background-color: rgba(255, 255, 255, 0.05);
+    color: white;
+}
+
+input[type="file"]{
+    width: 100%;
+    outline: none;
+    border: none;
 }
 
 input[type="submit"]{
