--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -1,3 +1,30 @@
+.credSlider{
+    background-color: white;
+    height: 40px;
+    width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 10px;
+}
+
+.credSlider>span{
+    margin: 0 5px;
+    z-index: 1;
+}
+
+.credSlider>#slider{
+    height: 40px;
+    width: 75px;
+    background-color: #512da8;
+    position: absolute;
+    z-index: 0;
+    left: 0;
+    margin: 0;
+    border-radius: 10px;
+}
+
+
 .container-credentials{
     background-color: #fff;
     border-radius: 30px;
