--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -9,11 +9,20 @@
 }
 
 .credSlider>span{
-    margin: 0 5px;
-    z-index: 1;
+    width: 75px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
 }
 
-.credSlider>#slider{
+/* .credSlider>span:hover{
+    color: white;
+    background-color: #512da8;
+} */
+
+/* .credSlider>#slider{
     height: 40px;
     width: 75px;
     background-color: #512da8;
@@ -22,7 +31,7 @@
     left: 0;
     margin: 0;
     border-radius: 10px;
-}
+} */
 
 
 .container-credentials{
