--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -1,3 +1,16 @@
+.cred-Container{
+    height: 800px;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cred-Container>div{
+    margin: 10px;
+}
+
 .credSlider{
     background-color: white;
     height: 40px;
@@ -77,10 +90,10 @@
     cursor: pointer;
 }
 
-.container-credentials button.hidden{
+/* .container-credentials button.hidden{
     background-color: transparent;
     border-color: #fff;
-}
+} */
 
 .container-credentials form{
     background-color: #fff;
@@ -123,20 +136,20 @@
 }
 
 .sign-up{
-    left: 0;
+    right: 100%;
     width: 50%;
-    opacity: 0;
+    /* opacity: 0; */
     z-index: 1;
 }
 
 .container-credentials .sign-up{
     transform: translateX(100%);
-    opacity: 1;
+    /* opacity: 1; */
     z-index: 5;
     animation: move 0.6s;
 }
 
-@keyframes move{
+/* @keyframes move{
     0%, 49.99%{
         opacity: 0;
         z-index: 1;
@@ -145,7 +158,7 @@
         opacity: 1;
         z-index: 5;
     }
-}
+} */
 
 .container-credentials>.form-container>form>.social-icons{
     margin: 20px 0;
