--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -28,6 +28,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    font-weight: bold;
 }
 
 /* .credSlider>span:hover{
