--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .shopPage{
     display: flex;
     flex-direction: row;
@@ -40,6 +42,19 @@
     color: white;
 }
 
+.shopInfoTitle{
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+}
+
+.shopInfoDesc{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+}
+
 .shopInfoFooter{
     display: flex;
     flex-direction: row;
@@ -54,13 +69,19 @@
     width: 100%;
     align-items: center;
     margin: 0px 15px;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-size: 14px;
 }
 
 .shopInfoUsername{
     display: flex;
     justify-content: left;
+    font-weight: 400;
 }
+
 .shopInfoPrice{
     display: flex;
     justify-content: right;
+    font-weight: 700;
 }
