--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -85,3 +85,29 @@
     justify-content: right;
     font-weight: 700;
 }
+
+/* card */
+.cardInfoMainHead{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 50px;
+    border-bottom: var(--border-color-drawing);
+}
+
+.cardInfoTitle{
+    font-size: 22px;
+    font-weight: 600;
+    position: absolute;
+    top: 30px;
+    left: 40px;
+    margin-bottom: 5px;
+}
+
+.cardInfoDate{
+    position: absolute;
+    top: 60px;
+    left: 40px;
+    font-size: 12px;
+    margin-bottom: 5px;
+}
