--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -113,7 +113,7 @@
 }
 
 .cardInfoMainBody{
-    /* border: 1px solid red; */
+    border: 1px solid red;
     height: fit-content;
     margin-top: 45px;
     display: flex;
@@ -165,4 +165,23 @@
     height: 13px;
     width: 13px;
     margin-right: 2px;
+}
+
+.paybtn{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--btn-bg-color);
+    color: var(--btn-text-color);
+    width: 155px;
+    height: 40px;
+    border-radius: 10px;
+    margin-top: 15px;
+    transition: var(--transition);
+}
+
+.paybtn:hover{
+    background-color: var(--btn-bg-color-hover);
+    color: var(--btn-text-color-hover);
 }
