--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -178,10 +178,35 @@
     height: 40px;
     border-radius: 10px;
     margin-top: 15px;
+    margin-bottom: 35px;
     transition: var(--transition);
 }
 
 .paybtn:hover{
     background-color: var(--btn-bg-color-hover);
     color: var(--btn-text-color-hover);
+}
+
+.cardInfoTable>table{
+    border: var(--border-color-drawing);
+}
+
+.cardInfoTableKeywords{
+    background-color: #46308E;
+    height: 24px;
+    width: max-content;
+    border-radius: 5px;
+    padding: 4px;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.cardInfoTable>table>tbody>tr>td{
+    padding: 15px;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.cardInfoTableContents{
+    font-size: 16px;
+    font-weight: 400;
 }
