--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -311,7 +311,7 @@
     border: var(--border-color-drawing);
     margin-top: 15px;
     border-radius: 23px;
-    padding: 5px;
+    /* padding: 5px; */
 }
 
 .cardInfoComment{
@@ -323,6 +323,7 @@
     border-radius: 23px;
     padding: 5px;
     align-items: center;
+    margin: 5px;
 }
 
 .cardInfoProfileComments{
@@ -335,6 +336,7 @@
 .cardInfoProfileCommentsDetails{
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-left: 5px;
 }
 
@@ -362,4 +364,15 @@
     font-size: 16px;
     font-weight: 400;
     margin-top: 5px;
+}
+
+.commentForm{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+.commentForm>input[type='text']{
+    margin-right: 5px;
 }
