--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -135,7 +135,7 @@
 }
 
 .cardInfoThumbnail{
-    background-color: white;
+    /* background-color: white; */
     width: 459px;
     height: 258px;
     border-radius: 23px;
