--- a/src/components/shop/shop_component/threedCanvas.css
+++ b/src/components/shop/shop_component/threedCanvas.css
@@ -1,6 +1,25 @@
 .ThreeDCanvasContainer{
-    height: 100%;
-    width: 100%;
+    height: 258px;
+    width: 459px;
+    transition: var(--transition);
     /* background-color: aqua; */
     /* border-radius: 23px; */
+}
+
+.fullScreen{
+    position: relative;
+    z-index: 1;
+    left: 92%;
+    top: 85%;
+    /* border: 1px solid red; */
+    background-color: var(--icon-bg-color);
+    color: var(--icon-svg-color);
+    border-radius: 4px;
+    padding: 2px;
+    transition: var(--transition);
+}
+
+.fullScreen:hover{
+    background-color: var(--icon-bg-color-hover);
+    color: var(--icon-svg-color-hover);
 }
