--- a/src/components/rhstudio/rhstudio_component/upload.css
+++ b/src/components/rhstudio/rhstudio_component/upload.css
@@ -16,3 +16,25 @@
 .upload > span{
     padding-left: 5px;
 }
+
+.uploadOptions{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.uploadOptionIcons{
+    background-color: var(--btn-bg-color);
+    color: var(--btn-text-color);
+    padding: 5px;
+    border-radius: 4px;
+    transition: var(--transition);
+    display: flex;
+    flex-direction: row;
+}
+
+.uploadOptionIcons:hover{
+    background-color: var(--btn-bg-color-hover);
+    color: var(--btn-text-color-hover);
+}
