--- a/src/components/rhstudio/rhstudio_component/upload.css
+++ b/src/components/rhstudio/rhstudio_component/upload.css
@@ -22,6 +22,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    margin-bottom: 50px;
 }
 
 .uploadOptionIcons{
@@ -32,6 +33,7 @@
     transition: var(--transition);
     display: flex;
     flex-direction: row;
+    place-items: center;
 }
 
 .uploadOptionIcons:hover{
