--- a/src/components/rhstudio/rhstudio_component/dropdownprofile.css
+++ b/src/components/rhstudio/rhstudio_component/dropdownprofile.css
@@ -1,7 +1,7 @@
 .dropdownContainer{
     position: absolute;
     top: 4.5rem;
-    right: 1.5rem;
+    right: 1.2rem;
     width: 80px;
     padding: 15px;
     border-radius: 4px;
@@ -10,6 +10,19 @@
     display: flex;
     flex-direction: column;
     place-items: center;
+}
+
+.dropdownContainer::before{
+    content: '';
+    position: absolute;
+    top: -0.85rem;
+    right: 0.42rem;
+    width: 25px;
+    height: 25px;
+    transform: rotate(45deg);
+    background-color: var(--card-popup-bg-color);
+    border-left: var(--border-color-drawing);
+    border-top: var(--border-color-drawing);
 }
 
 .dropdownList{
@@ -29,3 +42,4 @@
     height: 100%;
     border-radius: 4px;
 }
+
