--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -1,3 +1,63 @@
+.GetStartedContainer{
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    width: 99.8vw;
+}
+
+.HeroSection{
+    /* border: 1px solid red; */
+    height: 100vh;
+    width: 100vw;
+    /* background-image: url(/public/bg.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed; */
+    position: relative;
+    width: 100%;
+}
+
+.HeroSection > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    mix-blend-mode: luminosity;
+    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 100%);
+}
+
+.getStartedLogo{
+    position: relative;
+}
+
+.MidSection{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+}
+
+.borderWraper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(329deg, rgba(117,49,207,0) 0%, rgba(117,49,207,1) 100%);
+    padding: 1px;
+    border-radius: 10px;
+    height: fit-content;
+    width: fit-content;
+}
+
+.MidSection>img{
+    position: absolute;
+    border-radius: 10px;
+}
+
+
 .cred-Container{
     height: 800px;
     width: 100vw;
