--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -23,13 +23,36 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 0;
     mix-blend-mode: luminosity;
     background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 100%);
 }
 
 .getStartedLogo{
     position: relative;
+}
+
+.HeroText{
+    color: white;
+    position: absolute;
+    height: calc(100vh - 64px);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
+.HeroTextMain{
+    font-size: 48px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.HeroTextSub{
+    font-size: 32px;
+    font-weight: 500;
+    text-align: center;
 }
 
 .MidSection{
