--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -79,8 +79,9 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .borderWraper{
@@ -96,6 +97,21 @@
 
 .MidSection>img{
     position: absolute;
+    border-radius: 10px;
+}
+
+.cardMidSection{
+    margin-top: 15px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.cardMS{
+    height: 370px;
+    width: 370px;
+    background-color: #333;
     border-radius: 10px;
 }
 
