--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -100,12 +100,28 @@
     border-radius: 10px;
 }
 
+.MainCardMidSection{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.MainCardMidSection>div{
+    display: flex;
+    flex-direction: column;
+    color: #522588;
+    font-size: 100px;
+    font-weight: 700;
+}
+
 .cardMidSection{
-    margin-top: 50px;
+    margin-top: 100px;
     color: white;
     display: flex;
     flex-direction: row;
-    gap: 70px;
+    gap: 100px;
 }
 
 .cardMS{
@@ -113,6 +129,14 @@
     width: 200px;
     background-color: #333;
     border-radius: 10px;
+    overflow: hidden;
+}
+
+.cardMSPic{
+    height: 150px;
+    background-color: #512da8;
+    border-bottom: 1px solid white;
+    
 }
 
 
