--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -136,7 +136,15 @@
     height: 150px;
     background-color: #512da8;
     border-bottom: 1px solid white;
-    
+}
+
+.cardMSText{
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 500;
 }
 
 
