--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -161,7 +161,7 @@
     margin: 10px;
 }
 
-.credSlider{
+/* .credSlider{
     background-color: white;
     height: 40px;
     width: 150px;
@@ -169,9 +169,9 @@
     align-items: center;
     justify-content: space-evenly;
     border-radius: 10px;
-}
+} */
 
-.credSlider>span{
+/* .credSlider>span{
     width: 75px;
     height: 40px;
     display: flex;
@@ -179,6 +179,98 @@
     justify-content: center;
     border-radius: 10px;
     font-weight: bold;
+} */
+
+.switch{
+    position: relative;
+    width: 200px;
+    height: 50px;
+    border-radius: 25px;
+}
+
+.switch input{
+    appearance: none;
+    width: 200px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: var(--btn-bg-color);
+    outline: none;
+}
+
+.switch input::before,.switch input::after{
+    z-index: 2;
+    position: absolute;
+    top: -66%;
+    transform: translateY(-50%);
+    font-weight: bolder;
+}
+
+.switch input::before{
+    content: 'Sign-Up';
+    left: 20px;
+    color: var(--btn-text-color);
+}
+
+.switch input::after{
+    content: 'Sign-In';
+    right: 20px;
+    color: var(--btn-text-color);
+}
+
+.switch input:checked{
+    background: var(--btn-text-color);
+
+}
+
+.switch label{
+    z-index: 1;
+    position: absolute;
+    top: -34px;
+    bottom: 11px;
+    border-radius: 20px;
+}
+
+.switch input{
+    transition: 0.25s;
+}
+
+.switch input:checked:before{
+    color: var(--btn-text-color);
+    transition: color 0.5s;
+}
+
+.switch input:checked:after{
+    color: var(--btn-bg-color);
+    transition: color 0.5s;
+}
+
+.switch input:checked+label{
+    left: 10px;
+    right: 100px;
+    background: var(--btn-bg-color);
+    transition: left 0.5s, right 0.4s 0.2s;
+}
+
+.switch input:not(:checked){
+    background-color: var(--btn-bg-color);
+    transition: background 0.4s;
+}
+
+.switch input:not(:checked)::before{
+    color: var(--btn-text-color);
+    transition: color 0.5s;
+}
+
+.switch input:not(:checked)::after{
+    color: var(--btn-bg-color);
+    transition: color 0.5s 0.2s;
+}
+
+.switch input:not(:checked)+label{
+    left: 100px;
+    right: 10px;
+    background: var(--btn-text-color);
+    transition: left 0.4s 0.2s, right 0.5s, background 0.35s;
 }
 
 /* .credSlider>span:hover{
