--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -278,7 +278,14 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    z-index: 2;
+    transform: translateX(50%);
+    z-index: 5;
+    transition: transform 0.5s ease-in-out;
+    transform: translateX(0%);
+}
+
+.switchForm .slide-in{
+    transform: translateX(-50%);
 }
 
 
@@ -397,7 +404,7 @@
 .container-credentials .sign-up{
     transform: translateX(100%);
     /* opacity: 1; */
-    z-index: 5;
+    z-index: 2;
     animation: move 0.6s;
 }
 
@@ -412,20 +419,6 @@
     }
 } */
 
-.container-credentials>.form-container>form>.social-icons{
-    margin: 20px 0;
-}
-
-.container-credentials>.form-container>form>.social-icons>a{
-    border: 1px solid #ccc;
-    border-radius: 20%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 3px;
-    width: 40px;
-    height: 40px;
-}
 
 .toggle-container{
     position: absolute;
@@ -439,10 +432,6 @@
     z-index: 1000;
 }
 
-.container-credentials.active .toggle-container{
-    transform: translateX(-100%);
-    border-radius: 0 150px 100px 0;
-}
 
 .toggle{
     background-color: #512da8;
