--- a/src/components/get_started/getstarted.css
+++ b/src/components/get_started/getstarted.css
@@ -328,7 +328,7 @@
     margin: 15px 0 10px;
 }
 
-.container-credentials button{
+.container-credentials input[type='submit'], .container-credentials button{
     background-color: #512da8;
     color: #fff;
     font-size: 12px;
